# test_task

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  example.env  fill_db.py  manage.py  pyproject.toml  setup.cfg
app/: constants.py  main.py  settings.py
app/api/: http_errors.py  routers.py
app/api/dependencies/: db_session.py
app/api/endpoints/api/: operations_router.py
app/apiUtils/: authChecker.py
app/db/: base_repository.py  crud.py  sqlalchemy.py
app/db/entities/: __init__.py
app/db/entities/activity/: activity.py
app/db/entities/building/: building.py
app/db/entities/organisation/: organisation.py
app/db/entities/organisation_activity/: organisation_activity.py
app/db/entities/organisation_phone/: organisation_phone.py
app/db/migrations/: env.py  id_column.py
app/db/migrations/versions/: 1f927ea03430_create_organisation_activities.py  5ecb68b667f5_create_base_tables.py
app/db/repo/: organisation.py
app/schemas/: activity.py  base_scheme.py  building.py  organisation_phone.py
app/schemas/organisation/: organisation.py  organisation_filters.py  rectangle_geo_search.py
