
[tool.poetry]
name = "test_task"
version = "0.1.0"
description = "test task"
authors = ["Leonid Gorbunov <leonid.gorbunov@ccsteam.ru>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "*"
fastapi = "*"
pydantic = { version = "~1.10.4", extras = ["dotenv"] }
databases = { version = "*", extras = ["postgresql"] }
alembic = "1.13.3"
psycopg2-binary = "*"
loguru = "*"
python-multipart = "^0.0.10"
jinja2 = "^3.1.4"
openpyxl = "^3.1.5"
gunicorn = "~21.2.0"
uvicorn = { version = "~0.18.2", extras = ["standard"] }
pyjwt = {extras = ["crypto"], version = "==2.6.0"}
black = "^25.1.0"

[poetry.group.dev.dependencies]
add-trailing-comma = "2.2.1"
autoflake = "1.4.0"
black = "22.3.0"
isort = "5.10.1"
mypy = "~1.0.0"
wemake-python-styleguide = "0.16.0"

flake8-bandit = "2.1.2"  # https://github.com/PyCQA/bandit/issues/837
bandit = "1.7.2"  # https://github.com/PyCQA/bandit/issues/837

pytest = "~7.0.1"
pytest-asyncio = "~0.18.2"
pytest-cov = "~3.0.0"

asgi-lifespan = "~1.0.1"
requests = "~2.27.1"
respx = "~0.20.2"

markdown = "3.3.6"  # https://github.com/python-poetry/poetry/issues/4777

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
